// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`orderCreatedEvent > generateKlaviyoEvent should generate the klaviyo event for an order created message 1`] = `
{
  "data": {
    "attributes": {
      "metric": {
        "name": "Order created",
      },
      "profile": {
        "$email": "test@klaviyo.com",
        "$id": "123-123-123",
      },
      "properties": {
        "createdAt": "2023-01-27T15:00:00.000Z",
        "customerEmail": "test@klaviyo.com",
        "customerId": "123-123-123",
        "orderState": "Open",
        "totalPrice": {
          "centAmount": 1300,
          "currencyCode": "USD",
          "fractionDigits": 2,
          "type": "centPrecision",
        },
      },
      "time": "2023-01-27T15:00:00.000Z",
      "unique_id": undefined,
      "value": 13,
    },
    "type": "event",
  },
}
`;

exports[`orderCreatedEvent > generateKlaviyoEvent should generate the klaviyo events for line items in an order created message 1`] = `
{
  "data": {
    "attributes": {
      "metric": {
        "name": "Order created",
      },
      "profile": {
        "$email": "test@klaviyo.com",
        "$id": "123-123-123",
      },
      "properties": {
        "createdAt": "2023-01-27T15:00:00.000Z",
        "customerEmail": "test@klaviyo.com",
        "customerId": "123-123-123",
        "lineItems": [
          {
            "id": "123-123-123",
            "name": {
              "en": "Test product",
            },
            "totalPrice": {
              "centAmount": 1300,
              "currencyCode": "USD",
              "fractionDigits": 2,
              "type": "centPrecision",
            },
          },
        ],
        "orderState": "Open",
        "totalPrice": {
          "centAmount": 1300,
          "currencyCode": "USD",
          "fractionDigits": 2,
          "type": "centPrecision",
        },
      },
      "time": "2023-01-27T15:00:00.000Z",
      "unique_id": undefined,
      "value": 13,
    },
    "type": "event",
  },
}
`;

exports[`orderCreatedEvent > generateKlaviyoEvent should generate the klaviyo events for line items in an order created message 2`] = `
{
  "data": {
    "attributes": {
      "metric": {
        "name": "Ordered Product",
      },
      "profile": {
        "$email": "test@klaviyo.com",
        "$id": "123-123-123",
      },
      "properties": {
        "id": "123-123-123",
        "name": {
          "en": "Test product",
        },
        "totalPrice": {
          "centAmount": 1300,
          "currencyCode": "USD",
          "fractionDigits": 2,
          "type": "centPrecision",
        },
      },
      "time": "2023-01-27T15:00:00.000Z",
      "unique_id": "123-123-123",
      "value": 13,
    },
    "type": "event",
  },
}
`;
